[project]
name = "graphrag-monorepo"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["pandas", "pyarrow", "ollama", "networkx", "matplotlib", "graspologic"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
graphrag-common = { workspace = true }
